<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="130dp"
    android:layout_height="match_parent">

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="fill_parent"
        android:layout_height="40dp" >

        <ImageButton
            android:id="@+id/imageView1"
            style="@style/ImageView"
            android:contentDescription="@string/cifra"
            android:onClick="vai"
            android:src="@drawable/uno" />

        <ImageButton
            android:id="@+id/imageView2"
            style="@style/ImageView"
            android:contentDescription="@string/cifra"
            android:onClick="vai"
            android:src="@drawable/due" />

        <ImageButton
            android:id="@+id/imageView3"
            style="@style/ImageView"
            android:contentDescription="@string/cifra"
            android:onClick="vai"
            android:src="@drawable/tre" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="fill_parent"
        android:layout_height="40dp" >

        <ImageButton
            android:id="@+id/imageView4"
            style="@style/ImageView"
            android:contentDescription="@string/cifra"
            android:onClick="vai"
            android:src="@drawable/quattro" />

        <ImageButton
            android:id="@+id/imageView5"
            style="@style/ImageView"
            android:contentDescription="@string/cifra"
            android:onClick="vai"
            android:src="@drawable/cinque" />

        <ImageButton
            android:id="@+id/imageView6"
            style="@style/ImageView"
            android:contentDescription="@string/cifra"
            android:onClick="vai"
            android:src="@drawable/sei" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="fill_parent"
        android:layout_height="40dp" >

        <ImageButton
            android:id="@+id/imageView7"
            style="@style/ImageView"
            android:contentDescription="@string/cifra"
            android:onClick="vai"
            android:src="@drawable/sette" />

        <ImageButton
            android:id="@+id/imageView8"
            style="@style/ImageView"
            android:contentDescription="@string/cifra"
            android:onClick="vai"
            android:src="@drawable/otto" />

        <ImageButton
            android:id="@+id/imageView9"
            style="@style/ImageView"
            android:contentDescription="@string/cifra"
            android:onClick="vai"
            android:src="@drawable/nove" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="fill_parent"
        android:layout_height="40dp" >

        <ImageButton
            android:id="@+id/imageViewC"
            style="@style/ImageView"
            android:contentDescription="@string/cancella"
            android:onClick="vai"
            android:src="@drawable/canc" />

        <ImageButton
            android:id="@+id/imageView0"
            style="@style/ImageView"
            android:contentDescription="@string/cifra"
            android:onClick="vai"
            android:src="@drawable/zero" />

        <ImageButton
            android:id="@+id/imageViewB"
            style="@style/ImageView"
            android:contentDescription="@string/annulla"
            android:onClick="vai"
            android:src="@drawable/back" />
    </TableRow>

</TableLayout>